[BUG] Dont allow multiple products on segment
